// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Divider -> variant dash 1`] = `
<div
  className="sectionDash"
/>
`;

exports[`renders Divider -> variant v 1`] = `
<div
  className="dividerH"
/>
`;

exports[`renders Divider 1`] = `
<div
  className="divider"
>
  <div>
    <div
      className="title"
    >
      Test Divider
    </div>
  </div>
  <div
    className="section"
  />
</div>
`;
